bb-core-api/templates/namespace.yaml
---
# Source: bb-core-api-chart/templates/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: buy-better
