bb-core-api/templates/deployment.yaml
---
# Source: bb-core-api-chart/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: core-api-deployment
  namespace: buy-better

spec:
  selector:
    matchLabels:
      app: core-api
  replicas: 1
  template:
    metadata:
      labels:
        app: core-api
    spec:
      terminationGracePeriodSeconds: 60
      containers:
        - name: core-api
          image: opplieam/bb-core-api:0.0.1-65d4050
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 500m
            limits:
              cpu: 500m
          ports:
            - name: core-api-port
              containerPort: 3030

          livenessProbe:
            httpGet:
              path: /v1/liveness
              port: 3030
            initialDelaySeconds: 2
            periodSeconds: 5
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 4

          readinessProbe:
            httpGet:
              path: /v1/readiness
              port: 3030
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 4
